2012-04-04 Erwin Waterlander <waterlan@xs4all.nl>
	* po/eo.po: Update Esperanto translations.

2012-03-30 Erwin Waterlander <waterlan@xs4all.nl>
	* Skip UTF-16 file when conversion to UTF-8 goes wrong.
	* Update English and Dutch manual.

2012-03-28 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Support UTF-16 surrogate pairs.
	* dos2unix.c, unix2dos.c: Check wchar_t size.

2012-03-26 Erwin Waterlander <waterlan@xs4all.nl>
	* *.c: Use fgetc/fputc instead of getc/putc.

2012-03-25 Erwin Waterlander <waterlan@xs4all.nl>
	* po, man: Update Dutch translations.

2012-03-24 Erwin Waterlander <waterlan@xs4all.nl>
	* On Unix, convert UTF-16 files only when the locale encoding
	  is UTF-8 to prevent accidental loss of text.

2012-03-23 Erwin Waterlander <waterlan@xs4all.nl>
	* Turn off ISO and 7-bit mode if an Unicode text file is detected,
	  to prevent corruption of UTF-8 files.
	* Update English manual.
	* Fix compilation for WatcomC, DJGPP, MSYS, OS/2.
	* Makefile: Support CFLAGS_USER, LDFLAGS_USER, and DEFS_USER for
	  Debian Linux. Thanks to Jari Aalto.

2012-03-21 Erwin Waterlander <waterlan@xs4all.nl>
	* Support conversion of Unicode UTF-16 from stdin.
	* Update English manual.

2012-03-20 Erwin Waterlander <waterlan@xs4all.nl>
	* Support conversion of Unicode UTF-16 encoded files.

2012-03-16 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Make it compile on Cygwin 1.5.

2012-03-10 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 5.3.3
	* Makefile: Binary packages with native language support
	  get "-nls" suffix.

2012-03-08 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Option -V prints target OS on DOS/Windows/OS2.

2012-03-07 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix.c, unix2dos.c, mingw64.mak: Enabled wildcard
	  expansion for Win64 (MinGW-w64). Thanks to Steve Hay.
	* wccdos16.mak: Enabled wildcard expansion.
	* wccdos32.mak: Enabled wildcard expansion.
	* wccwin32.mak: Enabled wildcard expansion.